Add log_hash optimisation to options 2 and 3
Sending a hash of the log along with the evidence in options 2 and 3 can
allow for verifier-local cache optimisation to the flows in cases where
the log has not changed from prior attestation.

--- a/theme.css
+++ b/theme.css
@@ -27,7 +27,7 @@ section.title {
 }
 
 section.title::after {
-  content: "XXXXXX";
+  content: "";
 }
 
 footer {
@@ -35,4 +35,10 @@ footer {
   left: auto;
   right: 30px;
 }
+
+
+ul ul li {
+	font-size: 20pt;
+}
+
 /* vim: set sts=2 sw=2 et */
